# cjm-transcript-segment-align

./: .gitignore  README.md  demo_app.py  html_ids.html  html_ids.html.md  index.html  index.html.md  models.html  models.html.md  plugins_test.yaml  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
cjm_transcript_segment_align/: _modidx.py  html_ids.py  models.py
cjm_transcript_segment_align/components/: handlers.py  helpers.py  keyboard_config.py  step_renderer.py  sync_controls.py  toolbar_state.py
cjm_transcript_segment_align/routes/: chrome.py  forced_alignment.py  init.py
cjm_transcript_segment_align/services/: forced_alignment.py
components/: handlers.html  handlers.html.md  helpers.html  helpers.html.md  keyboard_config.html  keyboard_config.html.md  step_renderer.html  step_renderer.html.md  sync_controls.html  sync_controls.html.md  toolbar_state.html  toolbar_state.html.md
nbs/: html_ids.ipynb  index.ipynb  models.ipynb  nbdev.yml
nbs/components/: handlers.ipynb  helpers.ipynb  keyboard_config.ipynb  step_renderer.ipynb  sync_controls.ipynb  toolbar_state.ipynb
nbs/routes/: chrome.ipynb  forced_alignment.ipynb  init.ipynb
nbs/services/: forced_alignment.ipynb
routes/: chrome.html  chrome.html.md  forced_alignment.html  forced_alignment.html.md  init.html  init.html.md
services/: forced_alignment.html  forced_alignment.html.md
